--- a/index.html
+++ b/index.html
@@ -1,114 +1,108 @@
-<!DOCTYPE HTML>
-<!-- Original Dimension by HTML5 UP -->
-<html>
-	<head>
-		<title>Dimension by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Overlay Page Demo</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #111;
+            color: #fff;
+            overflow-x: hidden;
+        }
 
-		<!-- Wrapper -->
-		<div id="wrapper">
+        header {
+            text-align: center;
+            padding: 40px 0;
+        }
 
-			<!-- Header -->
-			<header id="header">
-				<div class="logo">
-					<span class="icon fa-gem"></span>
-				</div>
-				<div class="content">
-					<div class="inner">
-						<h1>Dimension</h1>
-						<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a>.<br />
-						Free for personal and commercial use.</p>
-					</div>
-				</div>
-				<nav>
-					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#work">Work</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-						<li><a href="https://html5up.net">Source</a></li>
-					</ul>
-				</nav>
-			</header>
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
 
-			<!-- Main -->
-			<div id="main">
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 20px;
+            cursor: pointer;
+        }
 
-				<!-- Intro -->
-				<article id="intro">
-					<h2 class="major">Intro</h2>
-					<span class="image main"><img src="https://html5up.net/uploads/demos/dimension/images/pic01.jpg" alt="" /></span>
-					<p>This is the original Dimension template as-is. Minimal, clean, and animated with slide transitions. No Vanta.js added.</p>
-				</article>
+        /* === Overlay Page === */
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 30px;
+            z-index: 999;
+        }
 
-				<!-- Work -->
-				<article id="work">
-					<h2 class="major">Work</h2>
-					<span class="image main"><img src="https://html5up.net/uploads/demos/dimension/images/pic02.jpg" alt="" /></span>
-					<p>Use this section to showcase your projects.</p>
-				</article>
+        .overlay h2 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
 
-				<!-- About -->
-				<article id="about">
-					<h2 class="major">About</h2>
-					<span class="image main"><img src="https://html5up.net/uploads/demos/dimension/images/pic03.jpg" alt="" /></span>
-					<p>A simple section for your bio or introduction text.</p>
-				</article>
+        .close-btn {
+            margin-top: 30px;
+            padding: 10px 20px;
+            font-size: 18px;
+            background: #444;
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>方案 A：主頁 + 分頁 Overlay</h1>
+        <nav>
+            <a onclick="openOverlay('intro')">Intro</a>
+            <a onclick="openOverlay('work')">Work</a>
+            <a onclick="openOverlay('contact')">Contact</a>
+        </nav>
+    </header>
 
-				<!-- Contact -->
-				<article id="contact">
-					<h2 class="major">Contact</h2>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field half">
-								<label for="name">Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field half">
-								<label for="email">Email</label>
-								<input type="email" name="email" id="email" />
-							</div>
-							<div class="field">
-								<label for="message">Message</label>
-								<textarea name="message" id="message" rows="4"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
-							<li><input type="reset" value="Reset" /></li>
-						</ul>
-					</form>
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					</ul>
-				</article>
+    <!-- Intro Overlay -->
+    <div id="intro" class="overlay">
+        <h2>Intro</h2>
+        <p>這裡是 Intro 內容。</p>
+        <button class="close-btn" onclick="closeOverlay('intro')">關閉</button>
+    </div>
 
-			</div>
+    <!-- Work Overlay -->
+    <div id="work" class="overlay">
+        <h2>Work</h2>
+        <p>這裡是 Work 內容。</p>
+        <button class="close-btn" onclick="closeOverlay('work')">關閉</button>
+    </div>
 
-			<!-- Footer -->
-			<footer id="footer">
-				<p class="copyright">© Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-			</footer>
+    <!-- Contact Overlay -->
+    <div id="contact" class="overlay">
+        <h2>Contact</h2>
+        <p>這裡是 Contact 內容。</p>
+        <button class="close-btn" onclick="closeOverlay('contact')">關閉</button>
+    </div>
 
-		</div>
+    <script>
+        function openOverlay(id) {
+            document.getElementById(id).style.display = 'flex';
+        }
 
-		<!-- BG -->
-		<div id="bg"></div>
-
-		<!-- Scripts -->
-		<script src="https://html5up.net/uploads/demos/dimension/assets/js/jquery.min.js"></script>
-		<script src="https://html5up.net/uploads/demos/dimension/assets/js/browser.min.js"></script>
-		<script src="https://html5up.net/uploads/demos/dimension/assets/js/breakpoints.min.js"></script>
-		<script src="https://html5up.net/uploads/demos/dimension/assets/js/util.js"></script>
-		<script src="https://html5up.net/uploads/demos/dimension/assets/js/main.js"></script>
-
-	</body>
+        function closeOverlay(id) {
+            document.getElementById(id).style.display = 'none';
+        }
+    </script>
+</body>
 </html>
