--- a/index.html
+++ b/index.html
@@ -65,6 +65,130 @@
     </style>
 </head>
 <body>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dimension + Modern Glass Modal</title>
+  <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
+  <style>
+    body { font-family: 'Arial', sans-serif; }
+
+    /* Overlay and modal styles */
+    #overlay {
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      backdrop-filter: blur(10px) brightness(0.6);
+      opacity: 0; pointer-events: none; transition: opacity 0.4s ease;
+    }
+    #overlay.active { opacity: 1; pointer-events: auto; }
+
+    .modal {
+      position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0.85);
+      width: 70%; max-width: 550px; padding: 40px;
+      background: rgba(255,255,255,0.2); border-radius: 20px;
+      backdrop-filter: blur(25px); box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+      opacity: 0; pointer-events: none; transition: all 0.35s ease; color: white;
+    }
+    .modal.active { opacity: 1; pointer-events: auto; transform: translate(-50%, -50%) scale(1); }
+    .modal h2 { font-size: 32px; margin-top: 0; }
+    .modal p { font-size: 18px; line-height: 1.6; }
+    .close-btn { margin-top: 20px; padding: 12px 20px; border: none; background: rgba(255,255,255,0.85); border-radius: 10px; cursor: pointer; font-size: 16px; }
+
+    /* Optional: adjust z-index so modal appears above Dimension header */
+    #wrapper { position: relative; z-index: 0; }
+  </style>
+</head>
+<body class="is-preload">
+
+<div id="wrapper">
+  <header id="header">
+    <div class="logo"><span class="icon fa-gem"></span></div>
+    <div class="content">
+      <div class="inner">
+        <h1>Dimension</h1>
+        <p>A fully responsive site template with modern glass modals.</p>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#" class="modal-link" data-modal="intro">Intro</a></li>
+        <li><a href="#" class="modal-link" data-modal="work">Work</a></li>
+        <li><a href="#" class="modal-link" data-modal="about">About</a></li>
+        <li><a href="#" class="modal-link" data-modal="contact">Contact</a></li>
+        <li><a href="#" class="modal-link" data-modal="source">Source</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div id="main">
+    <article id="intro"><h2 class="major">Intro</h2><span class="image main"><img src="https://html5up.net/uploads/demos/dimension/images/pic01.jpg" alt="" /></span></article>
+    <article id="work"><h2 class="major">Work</h2><span class="image main"><img src="https://html5up.net/uploads/demos/dimension/images/pic02.jpg" alt="" /></span></article>
+    <article id="about"><h2 class="major">About</h2><span class="image main"><img src="https://html5up.net/uploads/demos/dimension/images/pic03.jpg" alt="" /></span></article>
+    <article id="contact"><h2 class="major">Contact</h2></article>
+    <article id="source"><h2 class="major">Source</h2></article>
+  </div>
+
+  <footer id="footer"><p class="copyright">© Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p></footer>
+</div>
+
+<div id="overlay"></div>
+<div class="modal" id="modalBox">
+  <h2 id="modalTitle">Title</h2>
+  <p id="modalContent">Content goes here...</p>
+  <button class="close-btn" id="closeModal">Close</button>
+</div>
+
+<script src="https://html5up.net/uploads/demos/dimension/assets/js/jquery.min.js"></script>
+<script src="https://html5up.net/uploads/demos/dimension/assets/js/browser.min.js"></script>
+<script src="https://html5up.net/uploads/demos/dimension/assets/js/breakpoints.min.js"></script>
+<script src="https://html5up.net/uploads/demos/dimension/assets/js/util.js"></script>
+<script src="https://html5up.net/uploads/demos/dimension/assets/js/main.js"></script>
+<script src="js/action.js"></script>
+<script>
+const modalLinks = document.querySelectorAll('.modal-link');
+const overlay = document.getElementById('overlay');
+const modal = document.getElementById('modalBox');
+const modalTitle = document.getElementById('modalTitle');
+const modalContent = document.getElementById('modalContent');
+const closeBtn = document.getElementById('closeModal');
+
+// Modal content mapping
+const modalData = {
+  intro: { title: 'Intro', content: 'This is the Intro section using existing image.' },
+  work: { title: 'Work', content: 'Showcase your projects here.' },
+  about: { title: 'About', content: 'A short bio or description about yourself.' },
+  contact: { title: 'Contact', content: 'Your contact information or form goes here.' },
+  source: { title: 'Source', content: 'Reference links or credits.' }
+};
+
+modalLinks.forEach(link => {
+  link.addEventListener('click', e => {
+    e.preventDefault();
+    const key = link.getAttribute('data-modal');
+    modalTitle.textContent = modalData[key].title;
+    modalContent.textContent = modalData[key].content;
+    modal.classList.add('active');
+    overlay.classList.add('active');
+  });
+});
+
+closeBtn.onclick = () => {
+  modal.classList.remove('active');
+  overlay.classList.remove('active');
+};
+
+document.addEventListener('keydown', e => {
+  if(e.key === 'Escape') {
+    modal.classList.remove('active');
+    overlay.classList.remove('active');
+  }
+});
+</script>
+</body>
+</html>
+
     <header>
         <h1>方案 A：主頁 + 分頁 Overlay</h1>
         <nav>
