--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <title>Dimension + Glass Modal</title>
 <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
 <style>
+  body {
+  background: url('images/your-background.jpg') no-repeat center center fixed;
+  background-size: cover;
+}
 body { font-family: 'Arial', sans-serif; margin:0; background:#111; color:#fff; overflow-x:hidden; }
 
 #wrapper { position: relative; z-index: 0; }
