--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     opacity: 0;
     pointer-events: none;
     transition: all 0.35s ease;
-    color: white;
+    color: #000;
     z-index: 1000;
   }
   .modal.active {
