--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    color: #fff;
+    color: #000; /* 改黑色 */
     overflow-x: hidden;
     /* 頁面主要背景 */
     background: url('assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg') no-repeat center center fixed;
@@ -23,7 +23,7 @@
     position: fixed;
     top:0; left:0;
     width:100%; height:100%;
-    background: rgba(0,0,0,0.7);
+    background: rgba(255,255,255,0.5); /* 白色半透明背景 */
     opacity:0;
     pointer-events: none;
     transition: opacity 0.4s ease;
@@ -45,7 +45,7 @@
     opacity: 0;
     pointer-events: none;
     transition: all 0.35s ease;
-    color: #000;
+    color: #000; /* 改黑色 */
     z-index: 1000;
   }
   .modal.active {
@@ -58,7 +58,7 @@
     font-size: 28px;
     font-weight: bold;
     padding: 20px;
-    border-bottom: 1px solid rgba(255,255,255,0.3);
+    border-bottom: 1px solid rgba(0,0,0,0.2);
   }
 
   .modal-image img {
@@ -71,6 +71,7 @@
     padding: 20px;
     font-size: 16px;
     line-height: 1.6;
+    color: #000; /* 改黑色 */
   }
 
   .close-btn {
@@ -119,7 +120,7 @@
 <!-- overlay -->
 <div id="overlay"></div>
 
-<!-- modal 範例，點不同導航切換內容 -->
+<!-- modal 範例 -->
 <div class="modal" id="modalBox">
   <div class="modal-header" id="modalTitle">Title</div>
   <div class="modal-image"><img id="modalImage" src="" alt="Modal Image"></div>
@@ -138,10 +139,26 @@ const closeBtn = document.getElementById('closeModal');
 
 // modal 對應資料
 const modalData = {
-  intro: { title:'Intro', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'This is the Intro section with image.' },
-  work: { title:'Work', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'Showcase your projects here.' },
-  about: { title:'About', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'Short bio or description.' },
-  contact: { title:'Contact', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'Your contact info or form.' }
+  intro: { 
+    title:'Intro', 
+    img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', 
+    content:'這裡是 Intro 區塊，包含圖片與文字。' 
+  },
+  work: { 
+    title:'Work', 
+    img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', 
+    content:'這裡展示你的專案作品。' 
+  },
+  about: { 
+    title:'About', 
+    img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', 
+    content:'簡短的自我介紹或公司介紹。' 
+  },
+  contact: { 
+    title:'Contact', 
+    img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', 
+    content:'聯絡資訊或表單區塊。' 
+  }
 };
 
 modalLinks.forEach(link => {
