--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
   /* 導航列 */
   nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start; /* 文字靠上對齊 */
-    list-style: none;
-    padding: 0;
-    margin: 20px 0 0 0;
-    gap: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center; /* 垂直置中 */
+      list-style: none;
+      padding: 0;
+      margin: 20px 0 0 0;
+      gap: 30px;
   }
 
   nav ul li a {
@@ -158,6 +158,8 @@
   <div class="modal-content" id="modalContent">Content goes here...</div>
   <button class="close-btn" id="closeModal">Close</button>
 </div>
+
+console.log("Modal script loaded"); 
 
 <script>
 
