--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    color: #000; /* 文字黑色 */
+    color: #000;
     overflow-x: hidden;
-    /* 背景改用 GitHub raw 圖片 */
-    background: url('https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG') no-repeat center center fixed;
+    background: url('assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg') no-repeat center center fixed;
     background-size: cover;
   }
 
@@ -21,11 +20,12 @@
   /* header 調整 */
   header {
     position: relative;
-    min-height: 100vh; /* 滿螢幕高度 */
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start; /* 內容靠上 */
     align-items: center;
+    padding-top: 50px;
     z-index: 1;
   }
 
@@ -37,25 +37,34 @@
   }
 
   /* 導航列 */
+  nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    z-index: 2;
+  }
+
   nav ul {
-      display: flex;
-      justify-content: center;
-      align-items: center; /* 垂直置中 */
-      list-style: none;
-      padding: 0;
-      margin: 20px 0 0 0;
-      gap: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 30px;
   }
 
   nav ul li a {
     display: inline-block;
     padding: 10px 15px;
-    background: rgba(255,255,255,0.1); /* 半透明按鈕底色 */
+    background: rgba(255,255,255,0.1);
     border-radius: 5px;
     color: #000;
     text-decoration: none;
     font-weight: bold;
   }
+
   nav ul li a:hover {
     background: rgba(255,255,255,0.3);
   }
@@ -63,15 +72,15 @@
   /* overlay 淡化背景 */
   #overlay {
     position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    background: rgba(255,255,255,0.5);
-    opacity:0;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5);
+    opacity: 0;
     pointer-events: none;
     transition: opacity 0.4s ease;
     z-index: 999;
   }
-  #overlay.active { opacity:1; pointer-events:auto; }
+  #overlay.active { opacity: 1; pointer-events: auto; }
 
   /* 玻璃彈窗 */
   .modal {
@@ -79,7 +88,7 @@
     top: 50%; left: 50%;
     transform: translate(-50%,-50%) scale(0.85);
     width: 70%; max-width: 600px;
-    background: rgba(40,40,40,0.8);  /* 深灰色半透明 */
+    background: rgba(40,40,40,0.85); /* 深灰半透明 */
     border-radius: 20px;
     backdrop-filter: blur(20px);
     box-shadow: 0 15px 40px rgba(0,0,0,0.3);
@@ -87,35 +96,45 @@
     opacity: 0;
     pointer-events: none;
     transition: all 0.35s ease;
-    color: #fff;  /* 文字白色 */
+    color: #fff;
     z-index: 1000;
   }
+  .modal.active {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%,-50%) scale(1);
+  }
 
-  /* 文字內容 */
-  .modal-header,
+  .modal-header {
+    font-size: 28px;
+    font-weight: bold;
+    padding: 20px;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+  }
+
+  .modal-image img {
+    width: 100%;
+    display: block;
+  }
+
   .modal-content {
+    padding: 20px;
+    font-size: 16px;
+    line-height: 1.6;
     color: #fff;
   }
 
-  /* 關閉按鈕 */
   .close-btn {
-    position: absolute;
-    left: 20px;
-    bottom: 20px;
+    margin: 15px 20px;
     padding: 10px 20px;
     border: none;
-    background: rgba(255,255,255,0.3);
-    color: #000; /* 按鈕文字黑色 */
+    background: rgba(255,255,255,0.8);
     border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
-    z-index: 1010;
-    backdrop-filter: blur(10px);
+    color: #000;
   }
 
-  .close-btn:hover {
-    background: rgba(255,255,255,0.5);
-  }
 </style>
 </head>
 <body>
@@ -139,9 +158,7 @@
     </nav>
   </header>
 
-  <div id="main">
-    <!-- 原 Dimension 內容 -->
-  </div>
+  <div id="main"></div>
 
   <footer id="footer">
     <p class="copyright">© Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
@@ -160,7 +177,9 @@
 </div>
 
 <script>
-console.log("Modal script loaded"); 
+window.addEventListener('load', () => {
+    document.body.classList.remove('is-preload');
+});
 
 const modalLinks = document.querySelectorAll('.modal-link');
 const overlay = document.getElementById('overlay');
@@ -171,26 +190,10 @@ const modalContent = document.getElementById('modalContent');
 const closeBtn = document.getElementById('closeModal');
 
 const modalData = {
-  intro: { 
-    title:'Intro', 
-    img:'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG', 
-    content:'這裡是 Intro 區塊，包含圖片與文字。' 
-  },
-  work: { 
-    title:'Work', 
-    img:'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG', 
-    content:'這裡展示你的專案作品。' 
-  },
-  about: { 
-    title:'About', 
-    img:'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG', 
-    content:'簡短的自我介紹或公司介紹。' 
-  },
-  contact: { 
-    title:'Contact', 
-    img:'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG', 
-    content:'聯絡資訊或表單區塊。' 
-  }
+  intro: { title:'Intro', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'這裡是 Intro 區塊，包含圖片與文字。' },
+  work: { title:'Work', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'這裡展示你的專案作品。' },
+  about: { title:'About', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'簡短的自我介紹或公司介紹。' },
+  contact: { title:'Contact', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'聯絡資訊或表單區塊。' }
 };
 
 modalLinks.forEach(link => {
