--- a/index.html
+++ b/index.html
@@ -19,68 +19,72 @@
 
   /* header 調整 */
   header {
-    position: relative;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* 內容靠上 */
-    align-items: center;
-    padding-top: 50px;
-    z-index: 1;
+      position: relative;
+      min-height: auto; /* 不再 100vh */
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start; /* 內容靠上 */
+      align-items: center;
+      padding-top: 50px;
+      z-index: 1;
   }
 
   header .content .inner {
-    position: relative;
-    z-index: 2;
-    text-align: center;
-    padding: 50px 20px;
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      padding: 50px 20px;
   }
-
+  
   /* 導航列 */
   nav {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    z-index: 2;
+      position: relative; /* 重要 */
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      z-index: 2; /* 保證可點擊 */
   }
 
   nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    gap: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      gap: 30px;
   }
 
   nav ul li a {
-    display: inline-block;
-    padding: 10px 15px;
-    background: rgba(255,255,255,0.1);
-    border-radius: 5px;
-    color: #000;
-    text-decoration: none;
-    font-weight: bold;
+      display: inline-block;
+      padding: 10px 15px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 5px;
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
   }
 
   nav ul li a:hover {
-    background: rgba(255,255,255,0.3);
+      background: rgba(255,255,255,0.3);
   }
 
   /* overlay 淡化背景 */
   #overlay {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: rgba(0,0,0,0.5);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.4s ease;
-    z-index: 999;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      opacity: 0;
+      pointer-events: none; /* 只有 active 時才攔截 */
+      transition: opacity 0.4s ease;
+      z-index: 999;
   }
-  #overlay.active { opacity: 1; pointer-events: auto; }
+  #overlay.active { 
+      opacity: 1; 
+      pointer-events: auto; 
+  }
 
   /* 玻璃彈窗 */
   .modal {
