--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     font-family: 'Arial', sans-serif;
     color: #000;
     overflow-x: hidden;
-    background: url('assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg') no-repeat center center fixed;
+    background: url('assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%.jpg') no-repeat center center fixed;
     background-size: cover;
   }
 
