--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     font-family: 'Arial', sans-serif;
     color: #000;
     overflow-x: hidden;
-    background: url('assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%.jpg') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG') no-repeat center center fixed;
     background-size: cover;
-  }
+}
 
   #wrapper { position: relative; z-index: 0; }
 
