--- a/index.html
+++ b/index.html
@@ -57,17 +57,20 @@
   }
 
   nav ul li a {
-      display: inline-block;
-      padding: 10px 15px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 5px;
-      color: #000;
-      text-decoration: none;
-      font-weight: bold;
+    display: inline-block;
+    padding: 10px 15px;
+    background: rgba(0,0,0,0.7); /* 黑色半透明底 */
+    border: 2px solid #000;       /* 黑色邊框 */
+    border-radius: 5px;
+    color: #fff;                  /* 白字 */
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
   }
 
   nav ul li a:hover {
-      background: rgba(255,255,255,0.3);
+      background: rgba(0,0,0,0.9);
+      border-color: #333;           /* 滑鼠移上時邊框稍微變深 */
   }
 
   /* overlay 淡化背景 */
