--- a/index.html
+++ b/index.html
@@ -59,18 +59,23 @@
   nav ul li a {
     display: inline-block;
     padding: 10px 15px;
-    background: rgba(0,0,0,0.7); /* 黑色半透明底 */
+    background: rgba(0,0,0,0.7); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
     border: 2px solid #000;       /* 黑色邊框 */
     border-radius: 5px;
-    color: #fff;                  /* 白字 */
+    color: #fff;                  /* 白字#fff,黑字#000 */
     text-decoration: none;
     font-weight: bold;
     transition: 0.3s;
   }
 
   nav ul li a:hover {
-      background: rgba(0,0,0,0.9);
-      border-color: #333;           /* 滑鼠移上時邊框稍微變深 */
+    background: rgba(255,255,255,0.9); /* 滑鼠移上背景白色 */
+    color: #000;                       /* 滑鼠移上文字黑色 */
+  }
+
+  nav ul li a:active {
+    background: rgba(200,200,200,0.9); /* 按下背景灰色 */
+    color: #000;                        /* 按下文字黑色 */
   }
 
   /* overlay 淡化背景 */
