--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
   nav ul li a {
     display: inline-block;
     padding: 10px 15px;
-    background: rgba(0,0,0,0.7); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
+    background: rgba(100,100,100,0.6); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
     border: 2px solid #000;       /* 黑色邊框 */
     border-radius: 5px;
-    color: #fff;                  /* 白字#fff,黑字#000 */
+    color: #000;                  /* 白字#fff,黑字#000 */
     text-decoration: none;
     font-weight: bold;
     transition: 0.3s;
