--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dimension + Glass Modal</title>
+<title>佳咊實業有限公司 + Glass Modal</title>
 <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
 <style>
   body {
@@ -27,6 +27,9 @@
       align-items: center;
       padding-top: 50px;
       z-index: 1;
+      /* header 上下黑線 */
+      border-top: 2px solid #000;
+      border-bottom: 2px solid #000;
   }
 
   header .content .inner {
@@ -59,7 +62,7 @@
   nav ul li a {
     display: inline-block;
     padding: 10px 15px;
-    background: rgba(100,100,100,0.6); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
+    background: rgba(75,75,75,0.5); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
     border: 2px solid #000;       /* 黑色邊框 */
     border-radius: 5px;
     color: #000;                  /* 白字#fff,黑字#000 */
