--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     <div class="logo"><span class="icon fa-gem"></span></div>
     <div class="content">
       <div class="inner">
-        <h1>Dimension</h1>
-        <p>Demo with Glass Modals</p>
+        <h1>佳咊實業有限公司</h1>
+        <p>你的色彩 獨一無二</p>
       </div>
     </div>
     <nav>
