--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   nav ul li a {
     display: inline-block;
     padding: 10px 15px;
-    background: rgba(50,50,50,0.4); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
+    background: rgba(40,40,40,0.4); /* 黑色半透明底, 前三個數字 50,50,50 → 顏色深淺（0=黑，255=白）,第四個數字 0.8 → 透明度（1=不透明，0=完全透明）*/
     border: 2px solid #000;       /* 黑色邊框 */
     border-radius: 5px;
     color: #000;                  /* 白字#fff,黑字#000 */
@@ -179,6 +179,34 @@
     <p class="copyright">© Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
   </footer>
 </div>
+
+<style>
+/* header 文字設定 */
+header .content .inner {
+    text-align: center;
+    font-family: 'Arial', sans-serif;
+}
+
+header .content .inner h1 {
+    font-size: 48px;     /* 調整字體大小 */
+    color: #000000;      /* 黑色字 */
+    font-weight: bold;
+    margin: 0;
+}
+
+header .content .inner p {
+    font-size: 24px;     /* 調整字體大小 */
+    color: #333333;      /* 深灰色字 */
+    margin-top: 10px;
+}
+
+/* 導航列上下黑線 */
+nav {
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+}
+</style>
+
 
 <!-- overlay -->
 <div id="overlay"></div>
