--- a/index.html
+++ b/index.html
@@ -195,15 +195,15 @@ header .content .inner h1 {
 }
 
 header .content .inner p {
-    font-size: 24px;     /* 調整字體大小 */
+    font-size: 26px;     /* 調整字體大小 */
     color: #333333;      /* 深灰色字 */
     margin-top: 10px;
 }
 
 /* 導航列上下黑線 */
 nav {
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
 }
 </style>
 
