--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     font-family: 'Arial', sans-serif;
     color: #000;
     overflow-x: hidden;
-    background: url('https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash-15%25.JPG') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
