--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    color: #000;
+    color: #F000;
     overflow-x: hidden;
     background: url('https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/kevin-bessat-background.jpg') no-repeat center center fixed;
     background-size: cover;
@@ -28,8 +28,8 @@
       padding-top: 50px;
       z-index: 1;
       /* header 上下黑線 */
-      border-top: 2px solid #000;
-      border-bottom: 2px solid #000;
+      border-top: 2px solid #fff;
+      border-bottom: 2px solid #fff;
   }
 
   header .content .inner {
