--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@ const modalContent = document.getElementById('modalContent');
 const closeBtn = document.getElementById('closeModal');
 
 const modalData = {
-  intro: { title:'Intro', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'這裡是 Intro 區塊，包含圖片與文字。' },
-  work: { title:'Work', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'這裡展示你的專案作品。' },
-  about: { title:'About', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'簡短的自我介紹或公司介紹。' },
-  contact: { title:'Contact', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'聯絡資訊或表單區塊。' }
+  intro: { title:'關於佳咊', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'這裡是 Intro 區塊，包含圖片與文字。' },
+  work: { title:'服務內容', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'這裡展示你的專案作品。' },
+  about: { title:'產品內容', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'簡短的自我介紹或公司介紹。' },
+  contact: { title:'聯繫我們', img:'assets/images/kevin-bessat-WfKZ-ZkWDbE-unsplash.jpg', content:'聯絡資訊或表單區塊。' }
 };
 
 modalLinks.forEach(link => {
