--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ const modalData = {
 
   work: { 
     title: '服務內容', 
-    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/service.jpg', 
+    img: 'https://raw.github.com/Willa-oceanwei/chiahe/main/assets/images/majid-abparvar-work.jpg', 
     content: `
       ・塑膠色粉調色  
       ・Pantone 色號比對服務  
