--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     font-family: 'Arial', sans-serif;
     color: #F000;
     overflow-x: hidden;
-    background: url('https://raw.github.com/Willa-oceanwei/chiahe/main/assets/images/fabian-betto-background.jpg') no-repeat center center fixed;
+    background: url('https://raw.hgithub.com/Willa-oceanwei/chiahe/main/assets/images/neom-SUIMrEKVOXc-unsplash.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
