--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ const modalData = {
     title: '聯繫我們', 
     img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/contact.jpg', 
     content: `佳咊實業有限公司  
-📍 台中市○○區 ○○路 123 號  
-☎ 04-1234-5678  
+📍 台南市永康區中正南路309號  
+☎ 06-2536526
 📧 service@chiahe.com.tw`
   }
 };
