--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
   header .content .inner h1 {
       font-size: 48px;     
-      color: #000000;      
+      color: #fff;      
       font-weight: bold;
       margin: 0;
   }
