--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
 
   /* 調整彈窗圖片比例 */
   .modal-image img {
-    width: 100%;        /* 寬度填滿彈窗 */
-    height: auto;       /* 高度自動 */
-    max-height: 350px;  /* 限制最大高度 */
-    object-fit: cover;  /* 裁切填滿 */
-    display: block;
+      width: auto;          /* 避免拉伸 */
+      max-width: 90%;       /* 圖片最多占彈窗 90% 寬度 */
+      max-height: 300px;
+      display: block;
+      margin: 0 auto;       /* 水平置中 */
+      border-radius: 15px;  /* 可選，增加圓角感 */
   }
 
   .modal-content {
